# m-alloc

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  format.yml  release.yml  static-analysis.yml
benchmarks/: Adapters.cpp  Adapters.hpp  CMakeLists.txt  Runner.cpp  Runner.hpp  main.cpp
cmake/: CompilerWarnings.cmake  MAllocConfig.cmake.in  Sanitizers.cmake
docs/: Doxyfile  allocator.md  architecture.md  benchmarks.md  debugging.md  memory-layout.md
examples/: CMakeLists.txt  basic_allocation.cpp  benchmark_example.cpp  custom_allocator.cpp  placement_new.cpp  statistics_example.cpp  stl_integration.cpp
include/MAlloc/: Allocator.hpp  Config.hpp  Error.hpp  MAlloc.hpp  MemoryResource.hpp  Statistics.hpp  StlAllocator.hpp  Version.hpp
scripts/: build.sh  format.sh  run-tests.sh
src/: Allocator.cpp  AllocatorImpl.cpp  AllocatorImpl.hpp  BlockHeader.hpp  CentralState.hpp  DebugLayer.hpp  FreeList.hpp  LargeAllocator.cpp  LargeAllocator.hpp  PoolAllocator.cpp  PoolAllocator.hpp  SegmentHeap.cpp  SegmentHeap.hpp  SizeClassTable.hpp  StatisticsCollector.hpp  SystemMemory.cpp  SystemMemory.hpp  ThreadCache.cpp  ThreadCache.hpp
tests/: AlignmentTest.cpp  CMakeLists.txt  DebugFeaturesTest.cpp  FragmentationTest.cpp  LargeAllocationTest.cpp  RandomWorkloadTest.cpp  ReallocateTest.cpp  SmallAllocationTest.cpp  StatisticsTest.cpp  StlIntegrationTest.cpp  StressTest.cpp  ThreadSafetyTest.cpp
